--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="detail-box">
-                                            Fathima Ezzath
+                                           Github by Fathima Ezzath
                                                 Github<br />
                                                 Pages
                                             </h1>
